--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -1,20 +1,29 @@
 <!doctype html>
+
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
 <style type="text/css">
 	#mainPopup {
 		padding: 10px;
 		height: 200px;
 		width: 400px;
-		font-family: Helvetica, Ubuntu, Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
 	}
 	h1 {
 		font-size: 2em;
 	}
+  ul {
+    list-style-type: none;
+    padding: 0 0 0 1em;
+  }
+  ul li {
+    padding: 0 0 0.3em 0;
+    font-size: 1.3em;
+  }
 </style>
 
 <div id="mainPopup">
-<h1>buy Black</h1>
+  <h1>buy Black</h1>
+</div>
 
 <script src="lol.js"></script>
-
-<p>To shut this popup down, edit the manifest file and remove the "default popup" key. To edit it, just edit ext/browser_action/browser_action.html. The CSS is there, too.</p>
-</div>
