--- a/ext/src/browser_action/browser_action.html
+++ b/ext/src/browser_action/browser_action.html
@@ -20,6 +20,10 @@
     padding: 0 0 0.3em 0;
     font-size: 1.3em;
   }
+  div.no-alternatives {
+    font-size: 1.5em;
+    font-weight: bold;
+  }
 </style>
 
 <div id="mainPopup">
